# discord-qalib

./: .gitignore  404.html  LICENSE  README.md  bumpver.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  ⭐-custom-issue-template.md  🐛-bug-report.md
.github/workflows/: build-sphinx.yml  codacy.yml  code-cov.yml  discord-qalib.yml  mkdocs-deploy.yml  twine-publish.yml
about/: index.html
css/: custom.css
doc/: conf.py
doc/source/: conf.py  index.rst
docs/: about.md  conf.py  index.md  index.rst
docs/qalib/: context.md  interaction.md  renderer.md
docs/qalib/deserializers/: deserializer.md  json.md  xml.md
docs/qalib/parsers/: json.md  parser.md  xml.md
docs/qalib/template_engines/: Jinja2.md  formatter.md  jinja2.md
docs/qalib/templaters/: json.md  templater.md  xml.md
docs/source/: conf.py
docs/usage/: installation.md  simple-usage.md
docsrc/: index.rst
ignore/: menu_manager.py
qalib/: __init__.py  _response_manager.py  _xml_renderer.py  context.py  embed_manager.py  interaction.py  menu.py  menu_manager.py  qalib_context.py  renderer.py  response_manager.py  xml_renderer.py
qalib/context/: index.html
qalib/deserializers/deserializer/: index.html
qalib/deserializers/json/: index.html
qalib/deserializers/xml/: index.html
qalib/interaction/: index.html
qalib/parsers/json/: index.html
qalib/parsers/parser/: index.html
qalib/parsers/xml/: index.html
qalib/renderer/: index.html
qalib/renderers/: __init__.py  _renderer_proxy.py  embed_proxy.py  embed_renderer.py  jinja_proxy.py  menu_proxy.py  menu_renderer.py  renderer_proxy.py
qalib/renderers/file_renderers/: _item_wrappers.py  _json_renderer.py  _xml_renderer.py  jinja_renderer.py  renderer.py  renderer_factory.py
qalib/renderers/file_renderers/component_renderers/: _button.py  item.py  item_factory.py  virtual_items.py
qalib/template_engines/: formatter.py  jinja2.py  template_engine.py
qalib/template_engines/formatter/: index.html
qalib/template_engines/jinja2/: index.html
qalib/templaters/json/: index.html
qalib/templaters/templater/: index.html
qalib/templaters/xml/: index.html
qalib/translators/: __init__.py  deserializer.py  events.py  factory.py  json.py  menu.py  message_parsing.py  modal.py  parser.py  templater.py  view.py  xml.py
qalib/translators/element/: embed.py  expansive.py
qalib/translators/element/types/: embed.py
qalib/translators/json/: __init__.py  components.py  embed.py
qalib/translators/xml/: __init__.py  embed.py
qalib/utils/: __init__.py  colours.py  emojis.py
search/: search_index.json
source/: conf.py
tests/: mocked_classes.py  test_embed_manager.py  test_json_renderer.py  test_manager.py  test_menu_renderer.py  test_renderer.py  test_xml_renderer.py
tests/routes/: complete_messages.json  complete_messages.xml  error.json  error.xml  full_embeds.json  full_embeds.xml  jinja-test.xml  menus.json  menus.xml  modal.json  modal.xml  role_embeds.json  role_embeds.xml  select_embeds.json  select_embeds.xml  simple_embeds.json  simple_embeds.xml
tests/unit/: mocked_classes.py  test_embed_manager.py  test_factory.py  test_formatter.py  test_json_renderer.py  test_menu_renderer.py  test_qalib_context.py  test_renderer_factory.py  test_xml_renderer.py  types.py  utils.py
usage/installation/: index.html
usage/simple-usage/: index.html
