[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-qalib"
version = "1.0.0"
authors = [
  { name="YousefEZ", email="syberprojects@gmail.com" },
]
description = "Discord library built on discord.py to simplify source code by rendering templates of embeds and menus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/YousefEZ/discord-qalib"
"Bug Tracker" = "https://github.com/YousefEZ/discord-qalib/issues"